Added new port JSCOnly. https://bugs.webkit.org/show_bug.cgi?id=154512

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-03-13
Reviewed by Michael Catanzaro.

This port allows to build JavaScriptCore engine with minimal
dependencies.

.:

* CMakeLists.txt:
* Source/cmake/OptionsJSCOnly.cmake: Added.

Source/JavaScriptCore:

* PlatformJSCOnly.cmake: Added.

Source/WTF:

* wtf/PlatformJSCOnly.cmake: Added.
* wtf/none/MainThreadNone.cpp: Added.
* wtf/none/RunLoopNone.cpp: Added.
* wtf/none/WorkQueueNone.cpp: Added.

Tools:

* Scripts/build-jsc:
* Scripts/webkitdirs.pm:
(argumentsForConfiguration):
(executableProductDir):
(determinePortName):
(isJSCOnly):
(wrapperPrefixIfNeeded):
(generateBuildSystemFromCMakeProject):
(buildCMakeGeneratedProject):

Canonical link: https://commits.webkit.org/173526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198086 268f45cc-cd09-0410-ab3c-d52691b4dbfc