Source/WTF/wtf/WorkQueue.h
@@ -38,12 +38,12 @@
 #include <dispatch/dispatch.h>
 #endif
 
-#if PLATFORM(GTK)
+#if PLATFORM(EFL)
+#include <DispatchQueueEfl.h>
+#elif USE(GLIB)
 #include <wtf/Condition.h>
 #include <wtf/RunLoop.h>
 #include <wtf/glib/GRefPtr.h>
-#elif PLATFORM(EFL)
-#include <DispatchQueueEfl.h>
 #elif OS(WINDOWS)
 #include <wtf/HashMap.h>
 #include <wtf/Vector.h>
@@ -74,11 +74,11 @@ public:
 
     WTF_EXPORT_PRIVATE static void concurrentApply(size_t iterations, const std::function<void (size_t index)>&);
 
-#if PLATFORM(GTK)
-    RunLoop& runLoop() const { return *m_runLoop; }
-#elif PLATFORM(EFL)
+#if PLATFORM(EFL)
     void registerSocketEventHandler(int, std::function<void ()>);
     void unregisterSocketEventHandler(int);
+#elif USE(GLIB)
+    RunLoop& runLoop() const { return *m_runLoop; }
 #elif OS(DARWIN)
     dispatch_queue_t dispatchQueue() const { return m_dispatchQueue; }
 #endif
@@ -102,15 +102,15 @@ private:
     static DWORD WINAPI unregisterWaitAndDestroyItemCallback(void* context);
 #endif
 
-#if PLATFORM(GTK)
+#if PLATFORM(EFL)
+    RefPtr<DispatchQueue> m_dispatchQueue;
+#elif USE(GLIB)
     ThreadIdentifier m_workQueueThread;
     Lock m_initializeRunLoopConditionMutex;
     Condition m_initializeRunLoopCondition;
     RunLoop* m_runLoop;
     Lock m_terminateRunLoopConditionMutex;
     Condition m_terminateRunLoopCondition;
-#elif PLATFORM(EFL)
-    RefPtr<DispatchQueue> m_dispatchQueue;
 #elif OS(DARWIN)
     static void executeFunction(void*);
     dispatch_queue_t m_dispatchQueue;
